fix(driver-devtool): fix segmentfault post

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "private": true,
-  "name": "wechat-sync",
+  "name": "wechat-sync2024",
   "version": "0.0.7",
   "description": "",
   "workspaces": [
